Test PXF on clusters with RPM-based install of Hadoop Clients (#3648)
* removed pxf init options

* fixed substitution regex

* updated regex

* install hadoop clients via RPMs

* exit on error

* reorder operations

* copy cluster config files

* refactored to use HADOOP_ROOT

* added mapred-site.xml to test setup

* added 2 new pipeline jobs

* updated PXF job names in pipeline

--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -86,8 +86,10 @@ groups:
   - MM_gpcheckcat
   - QP_memory-accounting
   - QP_optimizer-functional
-  - regression_tests_pxf_hdp
-  - regression_tests_pxf_cdh
+  - regression_tests_pxf_hdp_rpm
+  - regression_tests_pxf_hdp_tar
+  - regression_tests_pxf_cdh_rpm
+  - regression_tests_pxf_cdh_tar
   - regression_tests_gphdfs_centos
   - regression_tests_gpcloud_centos
   - mpp_resource_group_centos6
@@ -248,8 +250,10 @@ groups:
   - MM_gpcheckcat
   - QP_memory-accounting
   - QP_optimizer-functional
-  - regression_tests_pxf_hdp
-  - regression_tests_pxf_cdh
+  - regression_tests_pxf_hdp_rpm
+  - regression_tests_pxf_hdp_tar
+  - regression_tests_pxf_cdh_rpm
+  - regression_tests_pxf_cdh_tar
   - regression_tests_gphdfs_centos
   - regression_tests_gpcloud_centos
   - mpp_resource_group_centos6
@@ -3032,7 +3036,7 @@ jobs:
         BLDWRAP_POSTGRES_CONF_ADDONS: fsync=off optimizer_print_missing_stats=off
         TEST_OS: centos
         CONFIGURE_FLAGS: {{configure_flags}}
-- name: regression_tests_pxf_hdp
+- name: regression_tests_pxf_hdp_rpm
   plan:
   - aggregate:
     - get: gpdb_src
@@ -3053,9 +3057,34 @@ jobs:
       image: centos-gpdb-dev-6
       params:
         GROUP: gpdb
+        HADOOP_CLIENT: HDP
         TARGET_OS: centos
         TARGET_OS_VERSION: 6
-- name: regression_tests_pxf_cdh
+- name: regression_tests_pxf_hdp_tar
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      passed: [gate_general_misc_start]
+    - get: bin_gpdb
+      resource: bin_gpdb_centos6
+      passed: [gate_general_misc_start]
+      trigger: true
+    - get: singlecluster
+      resource: singlecluster-HDP
+      trigger: true
+    - get: pxf_automation_src
+      trigger: true
+    - get: centos-gpdb-dev-6
+  - aggregate:
+    - task: regression_tests_pxf
+      file: gpdb_src/concourse/tasks/regression_tests_pxf.yml
+      image: centos-gpdb-dev-6
+      params:
+        GROUP: gpdb
+        HADOOP_CLIENT: TAR
+        TARGET_OS: centos
+        TARGET_OS_VERSION: 6
+- name: regression_tests_pxf_cdh_rpm
   plan:
   - aggregate:
     - get: gpdb_src
@@ -3075,6 +3104,30 @@ jobs:
     image: centos-gpdb-dev-6
     params:
       GROUP: gpdb
+      HADOOP_CLIENT: CDH
+      TARGET_OS: centos
+      TARGET_OS_VERSION: 6
+- name: regression_tests_pxf_cdh_tar
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      passed: [gate_general_misc_start]
+    - get: bin_gpdb
+      resource: bin_gpdb_centos6
+      passed: [gate_general_misc_start]
+      trigger: true
+    - get: singlecluster
+      resource: singlecluster-CDH
+      trigger: true
+    - get: pxf_automation_src
+      trigger: true
+    - get: centos-gpdb-dev-6
+  - task: regression_tests_pxf
+    file: gpdb_src/concourse/tasks/regression_tests_pxf.yml
+    image: centos-gpdb-dev-6
+    params:
+      GROUP: gpdb
+      HADOOP_CLIENT: TAR
       TARGET_OS: centos
       TARGET_OS_VERSION: 6
 - name: regression_tests_gphdfs_centos
@@ -3199,8 +3252,10 @@ jobs:
       - QP_memory-accounting
       - regression_tests_gpcloud_centos
       - regression_tests_gphdfs_centos
-      - regression_tests_pxf_hdp
-      - regression_tests_pxf_cdh
+      - regression_tests_pxf_hdp_rpm
+      - regression_tests_pxf_hdp_tar
+      - regression_tests_pxf_cdh_rpm
+      - regression_tests_pxf_cdh_tar
       - QP_optimizer-functional
       - MM_gpcheckcat
       trigger: true
@@ -3209,8 +3264,10 @@ jobs:
       - QP_memory-accounting
       - regression_tests_gpcloud_centos
       - regression_tests_gphdfs_centos
-      - regression_tests_pxf_hdp
-      - regression_tests_pxf_cdh
+      - regression_tests_pxf_hdp_rpm
+      - regression_tests_pxf_hdp_tar
+      - regression_tests_pxf_cdh_rpm
+      - regression_tests_pxf_cdh_tar
       - QP_optimizer-functional
       - MM_gpcheckcat
       trigger: true
@@ -3465,8 +3522,10 @@ jobs:
     - QP_memory-accounting
     - regression_tests_gpcloud_centos
     - regression_tests_gphdfs_centos
-    - regression_tests_pxf_hdp
-    - regression_tests_pxf_cdh
+    - regression_tests_pxf_hdp_rpm
+    - regression_tests_pxf_hdp_tar
+    - regression_tests_pxf_cdh_rpm
+    - regression_tests_pxf_cdh_tar
     - gpdb_rc_packaging_centos
     - MM_gpcheckcat
     - MM_gprecoverseg
