Unit test FTS probe probeReceive for exceptional scenarios
Case 1: FTS probe handler hang
Case 2: FTS probe handler FATAL and got killed
Case 3: FTS probe handler ERROR out

Signed-off-by: Xin Zhang <xzhang@pivotal.io>

--- a/src/backend/fts/test/Makefile
+++ b/src/backend/fts/test/Makefile
@@ -3,7 +3,7 @@ top_builddir=../../../..
 include $(top_builddir)/src/Makefile.global
 
 ifeq ($(enable_segwalrep), yes)
-TARGETS=ftsprobehandler
+TARGETS=ftsprobehandler ftsprobe
 
 include $(top_builddir)/src/backend/mock.mk
 
@@ -16,4 +16,11 @@ ftsprobehandler.t: \
     $(MOCK_DIR)/backend/libpq/pqformat_mock.o \
     $(MOCK_DIR)/backend/libpq/pqcomm_mock.o \
     $(MOCK_DIR)/backend/tcop/dest_mock.o
+
+ftsprobe.t: \
+    $(MOCK_DIR)/backend/utils/error/elog_mock.o \
+    $(MOCK_DIR)/backend/libpq/fe-exec_mock.o \
+    $(MOCK_DIR)/backend/libpq/fe-connect_mock.o \
+    $(MOCK_DIR)/backend/cdb/cdbthreadlog_mock.o
+
 endif
