Handle FTS probe message in a backend process
Use special connection parameter "gpconntype" to distinguish a normal libpq
connection from a connection initiated by FTS prober process for probing a
primary segment. It's similar to the "replication=true" for the
WalSender process. Currently we support `gpconntype="fts"`, this can be
extended to support other backend connection types.

Currently, for the FTS handler backend, we support `FTS_MSG_TYPE_PROBE` message type.
The rest of the message handling and process creation is similar to
WalSender process.

Signed-off-by: Ashwin Agrawal <aagrawal@pivotal.io>
Signed-off-by: Asim R P <apraveen@pivotal.io>

--- a/src/backend/fts/test/Makefile
+++ b/src/backend/fts/test/Makefile
@@ -14,5 +14,6 @@ ftsprobehandler.t: \
     $(MOCK_DIR)/backend/replication/gp_replication_mock.o \
     $(MOCK_DIR)/backend/lib/stringinfo_mock.o \
     $(MOCK_DIR)/backend/libpq/pqformat_mock.o \
-    $(MOCK_DIR)/backend/libpq/pqcomm_mock.o
+    $(MOCK_DIR)/backend/libpq/pqcomm_mock.o \
+    $(MOCK_DIR)/backend/tcop/dest_mock.o
 endif
