--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -2394,8 +2394,8 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: centos
-          tag: '6'
+          repository: pivotaldata/ccp
+          tag: "7"
       run:
         path: sh
         args:
@@ -2505,8 +2505,8 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: centos
-          tag: '6'
+          repository: pivotaldata/ccp
+          tag: "7"
       run:
         path: sh
         args:
